--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </p>
 
   <footer>
-    © 2025 Timer-Activity. Для связи: t.me/your_channel
+    © 2025 Timer-Activity. Для связи: t.me/StayOnlineTeam
   </footer>
 </body>
 </html>
