--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </p>
 
   <footer>
-    © 2025 Timer-Activity. Для связи: t.me/StayOnlineTeam
+    © 2025 Timer-Activity. Для связи: <a href="https://t.me/StayOnlineTeam">t.me/StayOnlineTeam</a>
   </footer>
 </body>
 </html>
