--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
       font-size: 0.9rem;
       color: #666;
     }
+    a {
+     color: #2d72d9;
+     text-decoration: underline;
+    }
+    a:hover {
+      color: #1a4fa1;
+    }
   </style>
 </head>
 <body>
