--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
     <div class="feature">🎁 Есть демо-версия для проверки совместимости</div>
   </section>
 
-  <button class="cta" onclick="window.location.href='https://github.com/website2020/timer-activity/releases/download/v0.1-demo/demo_test.zip'">Скачать демо</button>
-
+  <button class="cta" onclick="ym(102414042, 'reachGoal', 'download_demo'); window.location.href='https://github.com/website2020/timer-activity/releases/download/v0.1-demo/demo_test.zip';">
+   Скачать демо
+  </button
+  
   <p style="margin-top:1rem; font-size: 0.9rem; color: #555;">
     🔐 SHA256: <code>66dd19162b667111f13ab4a1fc1eadc31f68f1a65250762872084638ecdbd4d3</code><br>
     <small>Проверьте после загрузки: <code>Get-FileHash demo_test.zip -Algorithm SHA256</code></small>
